--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,13 +17,18 @@
   box-shadow: none !important;
 }
 
-.nav-bar ul{
+.about-li, .portfolio-li, .contact-li{
+  color: grey;
+}
+
+h1, h2, h3, p{
+  font-family: 'Handlee', cursive;
   color: grey;
 }
 
 .about{
   width: 100%;
-  height: auto;
+  height: 100vh;
   background-image: linear-gradient(#ffffff, #e7c5c6);
   margin-bottom: -3.5%;
   padding-bottom: 0;
@@ -37,7 +42,7 @@
 .portfolio{
   width: 100%;
   height: auto;
-  background-image: linear-gradient(#e7c5c6, #ffffff);
+  background-image: linear-gradient(#ffffff, #e7c5c6);
 }
 
 .project-title{
@@ -47,10 +52,27 @@
 .contact{
   width: 100%;
   height: 90vh;
-  background-image: linear-gradient(#ffffff, #e7c5c6);
+  background-image: linear-gradient(#e7c5c6, #ffffff);
 }
 
 footer{
   width: 100%;
   height: 10vh;
+}
+
+.btn{
+  background-color: transparent;
+  color: grey;
+  border: 1px solid grey;
+}
+
+.icon{
+  font-size: 30px;
+  color: grey;
+}
+
+.skills{
+  height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(#e7c5c6, #ffffff);
 }
