--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,3 +99,30 @@ footer{
 .contact-title{
   margin-top: 10%;
 }
+
+.back-to-top {
+  background: none;
+  margin-bottom: 1%;
+  margin-right: 1%;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 250px;
+  z-index: 100;
+  display: none;
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #e6b7b8;
+}  
+ 
+.icon-up{
+  font-size: 40px;
+  margin-left: 15%;
+  margin-top: 6%;
+}
+
+.logo-img{
+  margin-top: 6%;
+}
